# whipping_star

./: .gitignore  CMakeLists.txt  Makefile  README  SBNchi.c  SBNchi.h  SBNconfig.c  SBNconfig.h  SBNcovar.c  SBNcovar.h  SBNfit.c  SBNfit.h  SBNfit3pN.c  SBNfit3pN.h  SBNosc.c  SBNosc.h  SBNspec.c  SBNspec.h  examples.cxx  my.xml  params.h  sbn.xml  setup.sh  test.cxx  uboone.xml
MCcovar/: makeMC.cxx
data/precomp/: SBN_SINSQ_-0.04.root  SBN_SINSQ_-0.28.root  SBN_SINSQ_-0.36.root  SBN_SINSQ_-0.44.root  SBN_SINSQ_-0.48.root  SBN_SINSQ_-0.68.root  SBN_SINSQ_-0.76.root  SBN_SINSQ_-0.80.root  SBN_SINSQ_-0.88.root  SBN_SINSQ_-0.96.root  SBN_SINSQ_-1.12.root  SBN_SINSQ_-1.32.root  SBN_SINSQ_-1.40.root  SBN_SINSQ_-1.44.root  SBN_SINSQ_-1.56.root  SBN_SINSQ_-1.60.root  SBN_SINSQ_-1.68.root  SBN_SINSQ_-1.76.root  SBN_SINSQ_-1.96.root  SBN_SINSQ_-2.00.root  SBN_SINSQ_0.08.root  SBN_SINSQ_0.20.root  SBN_SINSQ_0.24.root  SBN_SINSQ_0.28.root  SBN_SINSQ_0.40.root  SBN_SINSQ_0.44.root  SBN_SINSQ_0.60.root  SBN_SINSQ_0.68.root  SBN_SINSQ_0.72.root  SBN_SINSQ_0.80.root  SBN_SINSQ_0.84.root  SBN_SINSQ_0.92.root  SBN_SINSQ_0.96.root  SBN_SINSQ_1.00.root  SBN_SINSQ_1.24.root  SBN_SINSQ_1.32.root  SBN_SINSQ_1.40.root  SBN_SINSQ_1.44.root  SBN_SINSQ_1.56.root  SBN_SINSQ_1.72.root  (+54 more)
data/rootfiles/: covariance_matrices_xcheck_690x690.root
examples/: CMakeLists.txt  examples.cxx  gentest.cxx  probtest.cxx  quickplot.cxx  testmc.cxx  unit_test.cxx
inc/: SBNchi.h  SBNconfig.h  SBNcovar.h  SBNdet.h  SBNfit.h  SBNfit3pN.h  SBNosc.h  SBNprob.h  SBNspec.h  SBNspec2D.h  SBgeN.h  params.h  prob.h
log/: val.log2
miniboone/: CMakeLists.txt  miniboone.cxx  miniboone.xml  minibooneL.cxx
precomp/: SBN_SINSQ_-0.00.root  SBN_SINSQ_-0.08.root  SBN_SINSQ_-0.12.root  SBN_SINSQ_-0.16.root  SBN_SINSQ_-0.20.root  SBN_SINSQ_-0.24.root  SBN_SINSQ_-0.32.root  SBN_SINSQ_-0.40.root  SBN_SINSQ_-0.52.root  SBN_SINSQ_-0.56.root  SBN_SINSQ_-0.60.root  SBN_SINSQ_-0.64.root  SBN_SINSQ_-0.72.root  SBN_SINSQ_-0.84.root  SBN_SINSQ_-0.92.root  SBN_SINSQ_-1.00.root  SBN_SINSQ_-1.04.root  SBN_SINSQ_-1.08.root  SBN_SINSQ_-1.16.root  SBN_SINSQ_-1.20.root  SBN_SINSQ_-1.24.root  SBN_SINSQ_-1.28.root  SBN_SINSQ_-1.36.root  SBN_SINSQ_-1.48.root  SBN_SINSQ_-1.52.root  SBN_SINSQ_-1.64.root  SBN_SINSQ_-1.72.root  SBN_SINSQ_-1.80.root  SBN_SINSQ_-1.84.root  SBN_SINSQ_-1.88.root  SBN_SINSQ_-1.92.root  SBN_SINSQ_0.04.root  SBN_SINSQ_0.12.root  SBN_SINSQ_0.16.root  SBN_SINSQ_0.32.root  SBN_SINSQ_0.36.root  SBN_SINSQ_0.48.root  SBN_SINSQ_0.52.root  SBN_SINSQ_0.56.root  SBN_SINSQ_0.64.root  (+69 more)
src/: CMakeLists.txt  SBNchi.cxx  SBNconfig.cxx  SBNcovar.cxx  SBNdet.cxx  SBNfit.cxx  SBNfit3pN.cxx  SBNosc.cxx  SBNprob.cxx  SBNspec.cxx  SBNspec2D.cxx  SBgeN.cxx  mdict.h  mdict_h.d  prob.cxx
tinyxml/: CMakeLists.txt
xml/: mini.xml  mini2.xml  mini_better.xml  sbn.xml  sbn_osc.xml  syst.xml  uboone.xml
